frontend/src/components/FormPage.scss
@import '../_constants.scss';
#transactions-wrapper,
#new-proj-wrapper,
#create-wastepicker-wrapper {
  padding-left: 40px;
  padding-right: 40px;

  h2,
  h3,
  h4 {
    font-weight: 600;
  }

  h1 {
    font-weight: normal;
    font-size: 30px;
  }

  /* a larger label for inputs */
  h3.label {
    margin-bottom: 5px;
  }

  .dwcc-title {
    display: block;
  }

  .field-wrapper {
    padding-top: 10px;
    padding-bottom: 20px;
  }

  .margin-right-20 {
    margin-right: 20px;
  }

  .form-section {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }

  .priceHeader {
    margin-bottom: 0px;
    margin-top: 0px;
  }

  .priceField {
    padding-top: 5px;
    display: inline-block;
  }

  .required-field-notif {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    font-size: 12px;
    font-style: italic;
    margin-bottom: 40px;
  }

  textarea {
    min-height: 80px;
    width: 100%;
    resize: vertical;
  }

  .text-input-field,
  textarea {
    font-size: 16px;
    margin: 0 auto;
    max-width: 400px;
    padding: 10px 15px;
  }

  .text-input-field {
    width: 8em;
  }

  .full-width input {
    width: 100%;
  }

  .half-width input {
    width: 38%;
  }

  .inline {
    display: inline;
  }

  .large-input input {
    font-size: 20px;
  }
  .emphasis-input input {
    font-size: 20px;
    padding: 0;
    padding-bottom: 10px;
    border-top: none;
    border-left: none;
    border-right: none;
  }
  #proj-name-field input:focus {
    outline: none;
  }

  .date-input-field,
  input {
    max-width: 400px;
    font-size: 14px;
    padding: 5px 10px;
  }

  .margin-top {
    margin-top: 30px;
  }
}

